# cicb

./: .clang-format  .gitignore  CMakeLists.txt  CUTE_MESSAGES  ChangeLog  INSTALL  Makefile.in  README  README.autoconf  TODO  TRIGGERS  aclocal.m4  config.h.in  configure  configure.in  icbserverdb  system.icbrc
attic/: HISTORY  RELEASE-5.0.7  RELEASE-5.0.8  RELEASE-5.0.9  RELEASE-5.0.9c1.0  RELEASE-old-to-new
contrib/: README  bartender  confuse
icb/: Makefile.in  c_color.c  c_hclear.c  c_hdel.c  c_help.c  c_hush.c  c_log.c  c_quit.c  c_rand.c  c_replay.c  c_shell.c  c_time.c  c_usage.c  c_version.c  cute.c  dispatch.c  externs.h  getline.c  getswitch.c  getswitch.h  globals.c  helpdata.c  history.c  icb.h  main.c  msgs.c  oset.c  parse.c  print.c  protocol.h  protos.h  readlineinit.c  s_admin.c  s_beep.c  s_chpw.c  s_group.c  s_motd.c  s_open.c  s_person.c  s_register.c  (+16 more)
icb/perl/: makedefs.pl  makehelp.pl
src/: c_color.c  c_hclear.c  c_hdel.c  c_help.c  c_hush.c  c_log.c  c_quit.c  c_rand.c  c_replay.c  c_shell.c  c_time.c  c_usage.c  c_version.c  cute.c  dispatch.c  externs.h  getline.c  getswitch.c  getswitch.h  globals.c  helpdata.c  history.c  icb.h  main.c  msgs.c  oset.c  parse.c  print.c  protocol.h  protos.h  readlineinit.c  s_admin.c  s_beep.c  s_chpw.c  s_group.c  s_motd.c  s_open.c  s_person.c  s_register.c  s_send.c  (+13 more)
tcl-scripts/: tcl_connected.tcl  tcl_init.tcl
tests/: CMakeLists.txt  INTEGRATION_TEST_SUMMARY.md  README_TESTS.md  icb_integration_test.cpp  integration_test.cpp  safe_atoi_test.cpp  server_mock_test.cpp  strings_test.cpp  strings_test_src.c  strlist_test.cpp
